# 3dFluidDynamicsInC

./: .clang-format  .gitignore  .pre-commit-config.yaml  3d-fluid-simulatio-car  3d-fluid-simulation-car  CITATION.cff  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  fluid_sim  main.c  modal_worker.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.gemini/: config.yaml  styleguide.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-modal.yml  release.yml
docs/: ARCHITECTURE.md  BENCHMARK.md  BUILDING.md  MODAL_API.md
lib/: coloring.h  config.h  fluid_cube.h  lbm.h  opengl_utils.h  particle_system.h
ml/: CMakeLists.txt  data_gen.py  evaluate.py  requirements.txt  sweep_config.yaml  train.cpp
ml/framework/: CMakeLists.txt  test_ml.cpp
ml/framework/include/: loss.hpp  weights_io.hpp
ml/framework/src/: autodiff.cpp  loss.cpp  optimizer.cpp  tensor.cpp  weights_io.cpp
ml/shapeopt/: ffd.py  gen_shapes.py  optimize.py  shapeopt_config.yaml  train_shapeopt.py
ml/superres/: evaluate_superres.py  export_weights.py  gen_pairs.py  requirements.txt  superres_config.yaml  superres_config_test.yaml  train_superres.py
obj-file-loader/lib/: model_loader.c  model_loader.h  render_model.h
obj-file-loader/src/: model_laoder.c  render_model.c
shaders/: lbm_collide.comp  lbm_force.comp  lbm_stream.comp  particle.comp  particle.frag  particle.vert  particle_lbm.comp  particle_render.frag
simulation/: CMakeLists.txt  README.md  modal_worker.py
simulation/lib/: cli.h  coloring.h  config.h  drag_metrics.h  event_handlers.h  fluid_cube.h  gl_context.h  gl_helpers.h  lbm.h  ml_predict.h  model_bounds.h  opengl_utils.h  particle_system.h  render_model.h  superres.h  view_matrix.h  voxelize.h  vti_export.h
simulation/lib/glad/include/glad/: egl.h  gl.h
simulation/lib/glad/src/: gl.c
simulation/obj-file-loader/lib/: model_loader.c  model_loader.h
simulation/shaders/: lbm_collide.comp  lbm_force.comp  lbm_stream.comp  particle.comp  particle.frag  particle.vert  particle_lbm.comp  particle_render.frag  particle_update.comp  streamline_trace.comp  superres_upscale.comp  trail.frag  trail.vert  trail_update.comp
simulation/src/: cli.c  coloring.c  drag_metrics.c  event_handlers.c  fluid_cube.c  gl_context.c  gl_helpers.c  lbm.c  main.c  ml_predict.c  model_bounds.c  opengl_utils.c  particle_system.c  render_model.c  superres.c  view_matrix.c  voxelize.c  voxelize_main.c  vti_export.c
simulation/test/: benchmark.sh  test_integration.sh  test_lbm.c  test_voxelize.c
simulation/test/benchmark_results/: results.csv
src/: coloring.c  fluid_cube.c  lbm.c  main.c  opengl_utils.c  particle_system.c  render_model.c
website/: package-lock.json  package.json  vitest.config.ts
website/src/app/: error.tsx  layout.tsx  page.tsx
website/src/app/api/render/: route.ts
website/src/app/comparison/: page.tsx
website/src/app/docs/: page.tsx
website/src/app/optimize/: page.tsx
website/src/components/: AboutSection.tsx  ControlPanel.tsx  ResultsPanel.tsx  StatusDisplay.tsx  VideoPlayer.tsx
website/src/components/docs/: Callout.tsx  CodeBlock.tsx  DocTable.tsx  DocsSidebar.tsx  GridCalculator.tsx  InlineCode.tsx  MathBlock.tsx  SrcLink.tsx
website/src/lib/: demos.ts  docs-sections.ts  highlight.ts  models.ts  shapeopt_surrogate.ts  spectral.ts  surrogate.ts  validateObj.ts
website/test/: components.test.tsx
